--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,16 @@ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=itda
 spring.datasource.password=itda
 
+spring.jpa.hibernate.ddl-auto=create
+
 spring.http.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
-# com.example.demo \uc778\ud130\ud398\uc774\uc2a4\uac00 \uc788\ub294 \ud328\ud0a4\uc9c0, \uc774 \ud328\ud0a4\uc9c0 \uc548\uc758 \uc778\ud130\ud398\uc774\uc2a4\ub294 @Repository, @Mapper\uac00 \uc124\uc815\ub418\uc5b4 \uc788\uc5b4\uc57c \ud568
-mybatis.type-aliases-package=com.project.itda
-# \ub9e4\ud37c XML \ud30c\uc77c\uc758 \uc704\uce58\ub97c \uc9c0\uc815
-mybatis.mapper-locations=classpath:mapper/**/*.xml
+spring.mvc.static-path-pattern=/static/**
+spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/static/dist
+spring.cors.allowed-origins=http://localhost:8081
 
-#logback 레벨 지정
+mybatis.type-aliases-package=com.project.itda
+mybatis.mapper-locations=classpath:mapper/**/*.xml
 logging.level.root=info
