--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.servlet.multipart.max-request-size=50MB
 mybatis.type-aliases-package=com.project.itda
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 
-logging.level.root=info
+logging.level.root=INFO
 logging.level.org.springframework.boot.autoconfigure.jdbc=DEBUG
