--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,14 @@
 		    <artifactId>jquery</artifactId>
 		    <version>3.5.1</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.4</version>
+		</dependency>
+
 
 	</dependencies>
 
