--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ mybatis.mapper-locations=classpath:mapper/**/*.xml
 
 logging.level.root=INFO
 logging.level.org.springframework.boot.autoconfigure.jdbc=DEBUG
+
+spring.mvc.async.request-timeout=-1
+spring.mvc.throw-exception-if-no-handler-found=true
