--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.mvc.view.suffix=.jsp
 server.port=8080
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@192.168.230.191:1521:xe
 spring.datasource.username=itda
 spring.datasource.password=itda
 
@@ -12,10 +12,11 @@ spring.http.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
-# com.example.demo \uc778\ud130\ud398\uc774\uc2a4\uac00 \uc788\ub294 \ud328\ud0a4\uc9c0, \uc774 \ud328\ud0a4\uc9c0 \uc548\uc758 \uc778\ud130\ud398\uc774\uc2a4\ub294 @Repository, @Mapper\uac00 \uc124\uc815\ub418\uc5b4 \uc788\uc5b4\uc57c \ud568
 mybatis.type-aliases-package=com.project.itda
-# \ub9e4\ud37c XML \ud30c\uc77c\uc758 \uc704\uce58\ub97c \uc9c0\uc815
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 
-#logback 레벨 지정
-logging.level.root=info
+logging.level.root=INFO
+logging.level.org.springframework.boot.autoconfigure.jdbc=DEBUG
+
+spring.mvc.async.request-timeout=-1
+spring.mvc.throw-exception-if-no-handler-found=true
