--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.mvc.view.suffix=.jsp
 server.port=8080
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.230.191:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=itda
 spring.datasource.password=itda
 
@@ -16,6 +16,7 @@ mybatis.type-aliases-package=com.project.itda
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 
 logging.level.root=INFO
+logging.level.com.project.itda.mapper=DEBUG
 logging.level.org.springframework.boot.autoconfigure.jdbc=DEBUG
 
 spring.mvc.async.request-timeout=-1
