--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
 		    <artifactId>javax.json</artifactId>
 		    <version>1.1.4</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.14.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
