--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.mvc.view.suffix=.jsp
 server.port=8080
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.230.225:1521:xe
-spring.datasource.username=itda2
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=c##itda5
 spring.datasource.password=itda
 
 spring.http.multipart.enabled=true
